--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,8 @@
 @import "./style/Home.css";
 @import "./style/BestSellers.css";
 @import "./style/ImageWithText.css";
+@import "./style/Newsletter.css";
+@import "./style/Footer.css";
 
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500&display=swap");
 
