--- a/src/style/Home.css
+++ b/src/style/Home.css
@@ -1,9 +1,9 @@
 .hero {
-  height: 800px;
+  height: 920px;
   background-image: url(../assets/hero.jpg);
   padding-top: 80px;
   background-size: cover;
-  background-position: 0% 30%;
+  background-position: top left;
 }
 
 .title {
@@ -44,34 +44,6 @@
 
 .bg-color {
   background-color: #d8d4d4;
-  /* z-index: -10; */
   position: relative;
   overflow: hidden;
-}
-
-/* .bg-image {
-  background-repeat: no-repeat;
-  object-fit: scale-down;
-  object-position: right top;
-  background-image: url("../assets/bg.jpg");
-  width: 35%;
-  height: 85%;
-  position: absolute;
-  z-index: -1;
-  left: 150px;
-  top: 40px;
-} */
-
-.bg-image {
-  /* background-repeat: no-repeat;
-  object-fit: scale-down;
-  object-position: right top; */
-  background-color: #95a199;
-  width: 80%;
-  height: 100%;
-  position: absolute;
-  z-index: 0;
-  right: -330px;
-  top: 0;
-  border-radius: 25%;
 }
