--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,30 @@
   box-sizing: border-box;
 }
 
+::-webkit-scrollbar {
+  width: 12px;
+  height: 12px;
+}
+
+* {
+  scrollbar-color: grey #bebcbc;
+  scrollbar-width: thin;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #c4c3c3;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #707070;
+  border-radius: 100vw;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: rgb(145, 143, 143);
+}
+
 body {
   margin: 0;
   padding: 0;
