--- a/src/style/About.css
+++ b/src/style/About.css
@@ -1,11 +1,12 @@
 .about-page-wrap {
-  background-image: url(../assets/bgimage2.svg);
+  /* background-image: url(../assets/bgimage2.svg);
   background-size: cover;
   top: 0;
   left: 0;
   bottom: 0;
   right: 0;
-  margin: 0;
+  margin: 0; */
+  background-color: #2b2a2a;
 }
 
 .introduction-wrap {
@@ -16,7 +17,7 @@
   padding: 20px 30px 0;
   text-align: center;
   height: 250px;
-  background-color: rgba(255, 255, 255, 0.37);
+  background-color: #bebebe;
   box-shadow: 0 0 7px #1d1d1d41;
 }
 
@@ -34,7 +35,7 @@
 
 .about-middle-section {
   display: flex;
-  /* column-gap: 90px; */
+  background-color: #e5e5e5;
 }
 
 .about-middle-section img {
