--- a/src/style/Navbar.css
+++ b/src/style/Navbar.css
@@ -118,6 +118,7 @@ nav {
     right: -300px;
     box-shadow: 0 40px 60px rgba(0, 0, 0, 0.1);
     transition: 0.3s;
+    z-index: 10;
   }
 
   #navbar.active {
