--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@
 @import "./style/About.css";
 @import "./style/Contact.css";
 @import "./style/Cart.css";
+@import "./style/ErrorPage.css";
 
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500&display=swap");
 
