--- a/src/style/Footer.css
+++ b/src/style/Footer.css
@@ -17,6 +17,11 @@ footer {
   padding: 0 15px;
 }
 
+.about.footer-item p {
+  margin: 0;
+  cursor: pointer;
+}
+
 .footer-wrap h6 {
   text-transform: uppercase;
   font-size: 16px;
