--- a/src/style/Product.css
+++ b/src/style/Product.css
@@ -116,6 +116,12 @@
   scroll-snap-align: start;
 }
 
+@media (min-width: 2900px) {
+  .similar-items {
+    grid-auto-columns: 13%;
+  }
+}
+
 @media (max-width: 1200px) {
   .item .item-image {
     height: 550px;
