--- a/src/style/Home.css
+++ b/src/style/Home.css
@@ -28,6 +28,81 @@
   overflow: hidden;
 }
 
+.popup {
+  position: fixed;
+  display: flex;
+  bottom: 30px;
+  left: 30px;
+  background-color: #f5efef;
+  border-radius: 10px;
+  padding: 20px;
+  width: 380px;
+  height: 200px;
+  z-index: 100;
+}
+
+.popup h3 {
+  display: flex;
+  justify-content: center;
+  width: 22%;
+  transform: rotate(-90deg);
+  font-size: 60px;
+  margin: 0;
+  padding-top: 25px;
+}
+
+.number-wrap {
+  display: flex;
+  justify-content: center;
+  height: 78%;
+}
+
+.number-wrap .number {
+  font-size: 94px;
+}
+
+.popup div .discount-wrap {
+  display: flex;
+  position: relative;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
+.popup div .discount-wrap span:first-of-type {
+  position: absolute;
+  top: 22px;
+}
+
+.popup div .discount-wrap span {
+  font-size: 38px;
+  margin-bottom: 14px;
+}
+
+.right-section {
+  width: 78%;
+  display: flex;
+  justify-content: center;
+}
+
+.right-section p {
+  position: absolute;
+  bottom: 17px;
+  font-size: 18px;
+}
+
+.right-section p span {
+  color: red;
+}
+
+.popup button {
+  background-color: transparent;
+  border: none;
+  font-size: 20px;
+  position: absolute;
+  top: 10px;
+  right: 15px;
+}
+
 @media (min-width: 2900px) {
   .hero {
     height: 1000px;
